# clothsim

./: .dir-locales.el  CMakeLists.txt  README.md
src/: App.cpp  App.h  CMakeLists.txt  Cloth.cpp  Cloth.h  Composition.frag  Drawable.cpp  Drawable.h  Integrators.cpp  Integrators.h  LICENSE_NOTICE.txt  MeshData.cpp  MeshData.h  Oscillator.cpp  Oscillator.h  PhongId.frag  PhongId.vert  PhongTransparentId.frag  Planet.cpp  Planet.h  Shaders.cpp  Shaders.h  System.cpp  System.h  UI.cpp  UI.h  Util.cpp  Util.h  Vertex.frag  Vertex.vert  imgui.ini  index.html  main.cpp  resources.conf  style.css
